// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipDefinition should allow the user to specify the direction 1`] = `
<TooltipDefinition
  align="start"
  className="custom-class"
  direction="top"
  tooltipText="tooltip text"
>
  <span
    className="cds--tooltip--definition cds--tooltip--a11y custom-class"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <button
      aria-describedby="definition-tooltip-3"
      className="cds--tooltip__trigger cds--tooltip--a11y cds--tooltip__trigger--definition cds--tooltip--top cds--tooltip--align-start"
      onBlur={[Function]}
      onFocus={[Function]}
      type="button"
    >
      tooltip trigger
    </button>
    <span
      className="cds--assistive-text"
      id="definition-tooltip-3"
      role="tooltip"
    >
      tooltip text
    </span>
  </span>
</TooltipDefinition>
`;

exports[`TooltipDefinition should render 1`] = `
<TooltipDefinition
  align="start"
  className="custom-class"
  direction="bottom"
  tooltipText="tooltip text"
>
  <span
    className="cds--tooltip--definition cds--tooltip--a11y custom-class"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <button
      aria-describedby="definition-tooltip-1"
      className="cds--tooltip__trigger cds--tooltip--a11y cds--tooltip__trigger--definition cds--tooltip--bottom cds--tooltip--align-start"
      onBlur={[Function]}
      onFocus={[Function]}
      type="button"
    >
      tooltip trigger
    </button>
    <span
      className="cds--assistive-text"
      id="definition-tooltip-1"
      role="tooltip"
    >
      tooltip text
    </span>
  </span>
</TooltipDefinition>
`;

exports[`TooltipDefinition should support a custom trigger element class 1`] = `
<TooltipDefinition
  align="start"
  className="custom-class"
  direction="bottom"
  tooltipText="tooltip text"
  triggerClassName="custom-trigger-class"
>
  <span
    className="cds--tooltip--definition cds--tooltip--a11y custom-class"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <button
      aria-describedby="definition-tooltip-2"
      className="cds--tooltip__trigger cds--tooltip--a11y cds--tooltip__trigger--definition custom-trigger-class cds--tooltip--bottom cds--tooltip--align-start"
      onBlur={[Function]}
      onFocus={[Function]}
      type="button"
    >
      tooltip trigger
    </button>
    <span
      className="cds--assistive-text"
      id="definition-tooltip-2"
      role="tooltip"
    >
      tooltip text
    </span>
  </span>
</TooltipDefinition>
`;
